Modify showcase details formatting and fixed flickering dragenter event for diagram

--- a/pub/layers_style.css
+++ b/pub/layers_style.css
@@ -253,3 +253,7 @@
 .menubutton:hover {
     cursor: pointer;
 }
+
+.ghost {
+    pointer-events: none;
+}
